// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  className="Diagram"
>
  <div
    className="Diagram-blocks"
  />
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;

exports[`with blocks renders the blocks 1`] = `
<div
  className="Diagram"
>
  <div
    className="Diagram-blocks"
  >
    <BlockDetail
      height={0}
      id="0"
      isLinking={false}
      key="0"
      name="Block 1"
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <BlockDetail
      height={0}
      id="1"
      isLinking={false}
      key="1"
      name="Block 2"
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;
